# goose

./: README.md
.github/workflows/: build.yml  codeql.yml  rust-core.yml  security.yml  server-ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/phases/03-ios-upload-client/: 03-CONTEXT.md  03-DISCUSSION-LOG.md  03-REVIEW.md
.planning/phases/04-upload-status-feedback/: 04-02-SUMMARY.md
.planning/phases/06-whoop-gen4-ios-support/: 06-REVIEW.md
.planning/phases/08-additional-wearables-e2e/: 08-P02-SUMMARY.md  08-P03-SUMMARY.md  08-VALIDATION.md
.planning/phases/08.1-close-gap-wear-01-wear-03-integrate-parse-hr-measurement-int/: 08.1-01-SUMMARY.md  08.1-02-SUMMARY.md
.planning/phases/09-ble-stability-data-integrity/: 09-02-SUMMARY.md  09-04-SUMMARY.md  09-REVIEWS.md  09-VERIFICATION.md
.planning/phases/10-hr-monitor-scan-connect-ui/: 10-03-SUMMARY.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-RESEARCH.md  10-UI-SPEC.md
.planning/phases/13-recovery-v2-dashboard/: 13-01-PLAN.md  13-01-SUMMARY.md
.planning/phases/18-coach-multi-provider/: 18-01-PLAN.md  18-01-SUMMARY.md  18-02-PLAN.md  18-03-PLAN.md  18-03-SUMMARY.md  18-04-PLAN.md  18-04-SUMMARY.md  18-05-PLAN.md  18-06-PLAN.md  18-PATTERNS.md  18-UAT.md  18-VALIDATION.md
.planning/phases/19-pt-pt-localisation-completion/: 19-01-SUMMARY.md
.planning/quick/260603-rls-adicionar-codeql-no-git/: 260603-rls-PLAN.md  260603-rls-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
GooseSwift/: AppShellView.swift  CaptureFrameWriteQueue.swift  ChatGPTCoachProvider.swift  CoachChatScreen.swift  CoachChatTypes.swift  CoachProviderProtocol.swift  CoachSettingsSheet.swift  CoachView.swift  CodexEmbeddedAuth.swift  ConnectionView.swift  CustomEndpointCoachProvider.swift  GeminiCoachProvider.swift  GeminiOAuthWebView.swift  GooseAppModel+HealthCapture.swift  GooseAppModel+Lifecycle.swift  GooseAppModel+NotificationPipeline.swift  GooseAppModel+Upload.swift  GooseAppModel.swift  GooseBLEClient+CentralDelegate.swift  GooseBLEClient+Commands.swift  GooseBLEClient+DebugAndSync.swift  GooseBLEClient+HRMonitor.swift  GooseBLEClient+HistoricalCommands.swift  GooseBLEClient+HistoricalHandlers.swift  GooseBLEClient+Parsing.swift  GooseBLEClient+PeripheralDelegate.swift  GooseBLEClient+UserActions.swift  GooseBLEClient.swift  GooseBLEReconnect.swift  GooseBLETypes.swift  GooseUploadService.swift  HealthDashboardViews.swift  HealthDataStore+CoachSummaries.swift  HealthDataStore+Snapshots.swift  HealthDataStore.swift  HealthView.swift  HomeDashboardView.swift  Info.plist  Localizable.xcstrings  MoreDataStore.swift  (+7 more)
GooseSwift.xcodeproj/: project.pbxproj
GooseSwiftTests/: CoachProviderTests.swift  GeminiProviderTests.swift  GooseBLETypesTests.swift  WearableDescriptorTests.swift
Rust/core/: Cargo.toml
Rust/core/src/: bridge.rs  capture_correlation.rs  capture_import.rs  export.rs  fixtures.rs  lib.rs  metric_features.rs  metrics.rs  openwhoop_reference.rs  perf_budget.rs  protocol.rs  store.rs
Rust/core/tests/: bridge_tests.rs  capture_correlation_tests.rs  capture_import_tests.rs  export_tests.rs  gen4_outbound_verification.rs  gen4_protocol_tests.rs  gen4_v24_decode_test.rs  history_sync_tests.rs  hrv_segment_rmssd_tests.rs  local_health_validation_suite_cli_tests.rs  metric_feature_report_cli_tests.rs  metric_features_tests.rs  metric_readiness_tests.rs  protocol_tests.rs  sleep_validation_tests.rs  step_motion_estimator_tests.rs  store_tests.rs
docs/: ADR-android-jni.md  WHOOP_4.0_GEN4.md
docs/api/: reference.md
docs/guides/: getting-started.md
server/: docker-compose.yml
server/ingest/: Dockerfile
server/ingest/app/: main.py
(+48 files in other folders)
