[package]
name = "goose-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Rust protocol, evidence, validation, and local calculation core for Goose."
license = "GPL-3.0-or-later"

[lib]
name = "goose_core"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "goose-fixture-index"
path = "src/bin/goose-fixture-index.rs"

[[bin]]
name = "goose-parser-fixture-runner"
path = "src/bin/goose-parser-fixture-runner.rs"

[[bin]]
name = "goose-capture-import"
path = "src/bin/goose-capture-import.rs"

[[bin]]
name = "goose-capture-sqlite-import"
path = "src/bin/goose-capture-sqlite-import.rs"

[[bin]]
name = "goose-capture-sanitize"
path = "src/bin/goose-capture-sanitize.rs"

[[bin]]
name = "goose-capture-correlation"
path = "src/bin/goose-capture-correlation.rs"

[[bin]]
name = "goose-capture-arrival-plan"
path = "src/bin/goose-capture-arrival-plan.rs"

[[bin]]
name = "goose-metric-input-readiness"
path = "src/bin/goose-metric-input-readiness.rs"

[[bin]]
name = "goose-metric-feature-report"
path = "src/bin/goose-metric-feature-report.rs"

[[bin]]
name = "goose-local-health-validation-suite"
path = "src/bin/goose-local-health-validation-suite.rs"

[[bin]]
name = "goose-command-validator"
path = "src/bin/goose-command-validator.rs"

[[bin]]
name = "goose-command-capture-plan"
path = "src/bin/goose-command-capture-plan.rs"

[[bin]]
name = "goose-reference-algo-runner"
path = "src/bin/goose-reference-algo-runner.rs"

[[bin]]
name = "goose-algo-benchmark"
path = "src/bin/goose-algo-benchmark.rs"

[[bin]]
name = "goose-calibration-evaluator"
path = "src/bin/goose-calibration-evaluator.rs"

[[bin]]
name = "goose-health-sync-dry-run"
path = "src/bin/goose-health-sync-dry-run.rs"

[[bin]]
name = "goose-historical-sync-validator"
path = "src/bin/goose-historical-sync-validator.rs"

[[bin]]
name = "goose-sleep-v1-release-gate"
path = "src/bin/goose-sleep-v1-release-gate.rs"

[[bin]]
name = "goose-sleep-v1-evidence-folder"
path = "src/bin/goose-sleep-v1-evidence-folder.rs"

[[bin]]
name = "goose-sleep-v1-stability-validator"
path = "src/bin/goose-sleep-v1-stability-validator.rs"

[[bin]]
name = "goose-sleep-window-validator"
path = "src/bin/goose-sleep-window-validator.rs"

[[bin]]
name = "goose-sleep-stage-label-validator"
path = "src/bin/goose-sleep-stage-label-validator.rs"

[[bin]]
name = "goose-storage-check"
path = "src/bin/goose-storage-check.rs"

[[bin]]
name = "goose-raw-export"
path = "src/bin/goose-raw-export.rs"

[[bin]]
name = "goose-export-validator"
path = "src/bin/goose-export-validator.rs"

[[bin]]
name = "goose-debug-ws-contract"
path = "src/bin/goose-debug-ws-contract.rs"

[[bin]]
name = "goose-debug-ws-serve"
path = "src/bin/goose-debug-ws-serve.rs"

[[bin]]
name = "goose-ui-coverage-audit"
path = "src/bin/goose-ui-coverage-audit.rs"

[[bin]]
name = "goose-privacy-lint"
path = "src/bin/goose-privacy-lint.rs"

[[bin]]
name = "goose-property-test-suite"
path = "src/bin/goose-property-test-suite.rs"

[[bin]]
name = "goose-perf-budget"
path = "src/bin/goose-perf-budget.rs"

[dependencies]
crc32fast = "1.4"
hex = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
zip = "0.6"

[target.'cfg(not(target_os = "android"))'.dependencies]
tungstenite = "0.28"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = "debuginfo"
